test integration test cicleCI fix